[gd_scene load_steps=2 format=3 uid="uid://cqynklv2vrfol"]

[ext_resource type="Script" path="res://scripts/item_attribute_modifier_setting.gd" id="1_o7ery"]

[node name="AttributeModifier" type="PanelContainer"]
script = ExtResource("1_o7ery")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Attribute" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Attribute"]
layout_mode = 2
text = "Attribute:"

[node name="AttributeLineEdit" type="LineEdit" parent="VBoxContainer/Attribute"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Type" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Type"]
layout_mode = 2
text = "Modifier Type:"

[node name="TypeLineEdit" type="LineEdit" parent="VBoxContainer/Type"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Modifiers from same type do not stack,
example:
Two rings of protection with type \"deflection\" won't stack with each other, the higher will be used.
If empty - stack with everything"

[node name="Value" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Value"]
layout_mode = 2
text = "Value:"

[node name="ValueTextEdit" type="TextEdit" parent="VBoxContainer/Value"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/line_spacing = -1
scroll_fit_content_height = true

[node name="Mode" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Mode"]
layout_mode = 2
text = "Mode:"

[node name="ModeOptionButton" type="OptionButton" parent="VBoxContainer/Mode"]
layout_mode = 2
item_count = 8
popup/item_0/text = "Add"
popup/item_0/id = 0
popup/item_1/text = "Subtract"
popup/item_1/id = 1
popup/item_2/text = "Set"
popup/item_2/id = 2
popup/item_3/text = "Max"
popup/item_3/id = 3
popup/item_4/text = "Min"
popup/item_4/id = 4
popup/item_5/text = "Multiply"
popup/item_5/id = 5
popup/item_6/text = "Divide"
popup/item_6/id = 6
popup/item_7/text = "Add String"
popup/item_7/id = 7

[node name="Priority" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Priority"]
layout_mode = 2
text = "Priority:"

[node name="PrioritySpinBox" type="SpinBox" parent="VBoxContainer/Priority"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DuplicateButton" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Duplicate"

[node name="DeleteButton" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete"

[connection signal="focus_exited" from="VBoxContainer/Attribute/AttributeLineEdit" to="." method="_on_attribute_line_edit_text_submitted"]
[connection signal="text_submitted" from="VBoxContainer/Attribute/AttributeLineEdit" to="." method="_on_attribute_line_edit_text_submitted"]
[connection signal="focus_exited" from="VBoxContainer/Type/TypeLineEdit" to="." method="_on_type_line_edit_text_submitted"]
[connection signal="text_submitted" from="VBoxContainer/Type/TypeLineEdit" to="." method="_on_type_line_edit_text_submitted"]
[connection signal="text_changed" from="VBoxContainer/Value/ValueTextEdit" to="." method="_on_value_text_edit_text_changed"]
[connection signal="item_selected" from="VBoxContainer/Mode/ModeOptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/Buttons/DuplicateButton" to="." method="_on_duplicate_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/DeleteButton" to="." method="_on_delete_button_pressed"]
